# RegistrationUI

./: CMakeLists.txt  README.md  Registration.cpp  Registration.h  RegistrationDemo.cpp  RegistrationDemo.h  RegistrationDemo.qrc  RegistrationDemo.ui  main.cpp
OPENGR/assets/: hippo1.ply  hippo2.ply
OPENGR/include/gr/utils/: sampling.h  shared.h
OPENGR/lib/cmake/opengr/: OpenGR-AccelLibTargets.cmake  OpenGR-AlgoLibTargets.cmake  OpenGR-UtilsLibTargets.cmake  OpenGRConfig.cmake  OpenGRConfigVersion.cmake
OPENGR/scripts/: mat_4pcs_fast.txt  mat_super4pcs_fast.txt  run-example.sh
